--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -44,9 +44,8 @@ wintypes:
 };
 
 opacity-rule = [
-    "80:class_g = 'Ulauncher'",
-    "70:class_g = '{{terminal}}' && focused",
-    "55:class_g = '{{terminal}}' && !focused"
+    "70:class_g = 'Alacritty' && focused",
+    "55:class_g = 'Alacritty' && !focused"
 ];
 
 shadow = false;
@@ -55,32 +54,6 @@ shadow-offset-x = -15;
 shadow-offset-y = -15;
 shadow-opacity = 0.8;
 
-shadow-exclude = [
-    "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name = 'cpt_frame_window'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
-];
-
-
-corner-radius = 0
+corner-radius = 0;
 
 xrender-sync-fence = true;
